<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/btn1"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:cornerRadius="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/btn2"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:cornerRadius="16dp"
        android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/btn1"

        app:layout_constraintTop_toTopOf="parent"
       />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/btn3"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:cornerRadius="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/btn2"

        app:layout_constraintTop_toTopOf="parent"
       />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/btn4"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:cornerRadius="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/btn3"

        app:layout_constraintTop_toTopOf="parent"
         />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        tools:layout_editor_absoluteX="106dp" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="14dp"

        android:text="@string/tvview"/>
</androidx.constraintlayout.widget.ConstraintLayout>